--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.joblib filter=lfs diff=lfs merge=lfs -text
 *.file_extension filter=lfs diff=lfs merge=lfs -text
+sample/voting_ensemble_skin_disease_model.joblib filter=lfs diff=lfs merge=lfs -text
+testnv/Lib/site-packages/cv2/cv2.pyd filter=lfs diff=lfs merge=lfs -text
